--- a/Project1/contact.html
+++ b/Project1/contact.html
@@ -14,6 +14,8 @@
             <a href="Vida.html">VIDA</a>   
             <a href="hobbies.html">HOBBIES</a>   
             <a href="contact.html">CONTACTAME</a>
+                
+            <a href="mailto:rmartinga@tauformar.com"><i class="bi bi-envelope"></i></a>
         </div>
     </header>
     <main class="contact">
